RESOLVED FIXED189681
"DidFirstVisuallyNonEmptyLayout" callback does not get called when restoring a page from PageCache
https://bugs.webkit.org/show_bug.cgi?id=189681
Summary "DidFirstVisuallyNonEmptyLayout" callback does not get called when restoring ...
Chris Dumez
Reported 2018-09-17 14:47:05 PDT
"DidFirstNonVisuallyEmptyLayout" callback does not get called when restoring a page from PageCache.
Attachments
Patch (6.22 KB, patch)
2018-09-17 14:53 PDT, Chris Dumez
no flags
Patch (6.22 KB, patch)
2018-09-17 14:55 PDT, Chris Dumez
no flags
Archive of layout-test-results from ews100 for mac-sierra (2.83 MB, application/zip)
2018-09-17 15:40 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews112 for mac-sierra (3.14 MB, application/zip)
2018-09-17 16:38 PDT, EWS Watchlist
no flags
Archive of layout-test-results from ews105 for mac-sierra-wk2 (3.20 MB, application/zip)
2018-09-17 16:51 PDT, EWS Watchlist
no flags
Patch (7.54 KB, patch)
2018-09-17 17:00 PDT, Chris Dumez
no flags
Patch (8.48 KB, patch)
2018-09-18 08:43 PDT, Chris Dumez
no flags
Chris Dumez
Comment 1 2018-09-17 14:47:21 PDT
Chris Dumez
Comment 2 2018-09-17 14:53:05 PDT
Chris Dumez
Comment 3 2018-09-17 14:55:33 PDT
alan
Comment 4 2018-09-17 14:57:16 PDT
Comment on attachment 349943 [details] Patch View in context: https://bugs.webkit.org/attachment.cgi?id=349943&action=review > Source/WebCore/history/CachedFrame.cpp:159 > + m_view->clear(); This might reset a bit more than what we actually need (and should).
EWS Watchlist
Comment 5 2018-09-17 15:40:46 PDT
Comment on attachment 349944 [details] Patch Attachment 349944 [details] did not pass mac-ews (mac): Output: https://webkit-queues.webkit.org/results/9248396 New failing tests: compositing/iframes/page-cache-layer-tree.html
EWS Watchlist
Comment 6 2018-09-17 15:40:48 PDT
Created attachment 349955 [details] Archive of layout-test-results from ews100 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-ews. Bot: ews100 Port: mac-sierra Platform: Mac OS X 10.12.6
EWS Watchlist
Comment 7 2018-09-17 16:38:00 PDT
Comment on attachment 349944 [details] Patch Attachment 349944 [details] did not pass mac-debug-ews (mac): Output: https://webkit-queues.webkit.org/results/9248802 New failing tests: compositing/iframes/page-cache-layer-tree.html
EWS Watchlist
Comment 8 2018-09-17 16:38:02 PDT
Created attachment 349969 [details] Archive of layout-test-results from ews112 for mac-sierra The attached test failures were seen while running run-webkit-tests on the mac-debug-ews. Bot: ews112 Port: mac-sierra Platform: Mac OS X 10.12.6
Chris Dumez
Comment 9 2018-09-17 16:47:34 PDT
(In reply to Build Bot from comment #7) > Comment on attachment 349944 [details] > Patch > > Attachment 349944 [details] did not pass mac-debug-ews (mac): > Output: https://webkit-queues.webkit.org/results/9248802 > > New failing tests: > compositing/iframes/page-cache-layer-tree.html --- /Volumes/Data/WebKit/OpenSource/WebKitBuild/Debug/layout-test-results/compositing/iframes/page-cache-layer-tree-expected.txt +++ /Volumes/Data/WebKit/OpenSource/WebKitBuild/Debug/layout-test-results/compositing/iframes/page-cache-layer-tree-actual.txt @@ -24,7 +24,7 @@ (children 1 (GraphicsLayer (anchor 0.00 0.00) - (bounds 285.00 135.00) + (bounds 285.00 150.00) (children 1 (GraphicsLayer (children 1 @@ -74,7 +74,7 @@ (children 1 (GraphicsLayer (anchor 0.00 0.00) - (bounds 285.00 135.00) + (bounds 285.00 150.00) (children 1 (GraphicsLayer (children 1
EWS Watchlist
Comment 10 2018-09-17 16:51:21 PDT
Comment on attachment 349944 [details] Patch Attachment 349944 [details] did not pass mac-wk2-ews (mac-wk2): Output: https://webkit-queues.webkit.org/results/9249478 New failing tests: compositing/iframes/page-cache-layer-tree.html fast/scrolling/iframe-scrollable-after-back.html
EWS Watchlist
Comment 11 2018-09-17 16:51:22 PDT
Created attachment 349973 [details] Archive of layout-test-results from ews105 for mac-sierra-wk2 The attached test failures were seen while running run-webkit-tests on the mac-wk2-ews. Bot: ews105 Port: mac-sierra-wk2 Platform: Mac OS X 10.12.6
Chris Dumez
Comment 12 2018-09-17 16:58:19 PDT
(In reply to Chris Dumez from comment #9) > (In reply to Build Bot from comment #7) > > Comment on attachment 349944 [details] > > Patch > > > > Attachment 349944 [details] did not pass mac-debug-ews (mac): > > Output: https://webkit-queues.webkit.org/results/9248802 > > > > New failing tests: > > compositing/iframes/page-cache-layer-tree.html > > --- > /Volumes/Data/WebKit/OpenSource/WebKitBuild/Debug/layout-test-results/ > compositing/iframes/page-cache-layer-tree-expected.txt > +++ > /Volumes/Data/WebKit/OpenSource/WebKitBuild/Debug/layout-test-results/ > compositing/iframes/page-cache-layer-tree-actual.txt > @@ -24,7 +24,7 @@ > (children 1 > (GraphicsLayer > (anchor 0.00 0.00) > - (bounds 285.00 135.00) > + (bounds 285.00 150.00) > (children 1 > (GraphicsLayer > (children 1 > @@ -74,7 +74,7 @@ > (children 1 > (GraphicsLayer > (anchor 0.00 0.00) > - (bounds 285.00 135.00) > + (bounds 285.00 150.00) > (children 1 > (GraphicsLayer > (children 1 The difference is that the scrollbars are gone, likely due to the setScrollbarsSuppressed(true) call in FrameView::clear(). I guess I will only reset the layout milestone related flags.
Chris Dumez
Comment 13 2018-09-17 17:00:19 PDT
alan
Comment 14 2018-09-17 17:20:04 PDT
Comment on attachment 349974 [details] Patch Please replace the relevant variables in FrameView::reset() with the resetLayoutMilestones() call.
Chris Dumez
Comment 15 2018-09-17 18:21:44 PDT
(In reply to zalan from comment #14) > Comment on attachment 349974 [details] > Patch > > Please replace the relevant variables in FrameView::reset() with the > resetLayoutMilestones() call. Good idea, will do.
Chris Dumez
Comment 16 2018-09-18 08:43:17 PDT
WebKit Commit Bot
Comment 17 2018-09-18 09:06:17 PDT
Comment on attachment 350022 [details] Patch Clearing flags on attachment: 350022 Committed r236142: <https://trac.webkit.org/changeset/236142>
WebKit Commit Bot
Comment 18 2018-09-18 09:06:19 PDT
All reviewed patches have been landed. Closing bug.
Note You need to log in before you can comment on or make changes to this bug.