"DidFirstVisuallyNonEmptyLayout" callback does not get called when restoring a page from PageCache https://bugs.webkit.org/show_bug.cgi?id=189681 <rdar://problem/44526171>

Reviewed by Alex Christensen and Zalan Bujtas.

Source/WebCore:

The "DidFirstVisuallyNonEmptyLayout" callback was not getting called when restoring a page from PageCache
because the FrameView is restored from PageCache and we would fail to restore its flags (such as
m_firstVisuallyNonEmptyLayoutCallbackPending) when entering Page Cache. We now call reset those flags that
are related to layout miletones when entering PageCache so that layout milestone events properly get sent
again when restoring from Page Cache.

* history/CachedFrame.cpp:
(WebCore::CachedFrame::CachedFrame):

Tools:

Add API test coverage.

* TestWebKitAPI/Tests/WebKit/LayoutMilestonesWithAllContentInFrame.cpp:
(TestWebKitAPI::didFinishNavigation):
(TestWebKitAPI::TEST):


Canonical link: https://commits.webkit.org/204665@main
git-svn-id: https://svn.webkit.org/repository/webkit/trunk@236142 268f45cc-cd09-0410-ab3c-d52691b4dbfc